--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_CONNECT = mongodb+srv://<USERNAME>:<PASSWORD>@cluster0.nipav.mongodb.net/<DB>?retryWrites=true&w=majority
+DB_CONNECT = mongodb+srv://Molkavi:MenoMon19@cluster0.nipav.mongodb.net/TodoListApp?retryWrites=true&w=majority
